--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,10 +59,10 @@
         android:name=".LinphoneApplication"
         android:allowBackup="false"
         android:enableOnBackInvokedCallback="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/avt"
         android:label="Call App Test"
         android:localeConfig="@xml/locales_config"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/avt"
         android:extractNativeLibs="${extractNativeLibs}"
         android:theme="@style/AppTheme"
         android:allowNativeHeapPointerTagging="false">
